bug: 51183    issue warning and exit if activation server can't be contacted on upgrade.    add --skip-activation-check to install.sh to allow for override    add -activation <file> option to install.sh to allow for installation of manual activation file
http://bugzilla.zimbra.com/show_bug.cgi?id=51183

Copied from Perforce
 Change: 252466